# focl-lang

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  REVIEW.md  pyproject.toml
.github/workflows/: ci.yml
docs/: WHITEPAPER.md
focl/: analyzer.py  cli.py  generator.py  metrics.py  sharder.py  watcher.py
tests/: conftest.py  test_analyzer.py  test_cli.py  test_metrics.py  test_sharder.py  test_watcher.py
